--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	 <a-box position='0 0.5 0' material='opacity: 0.5;'>
 	 <a-gltf-model src="scene.gltf"></a-gltf-model>
 	 </a-box>
-
+	 
+	<!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+	<a-collada-model src="tree.dae"></a-collada-model>
   
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
