--- a/index.html
+++ b/index.html
@@ -4,27 +4,41 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs>
-    <!-- create your content here. just a box for now -->
+  <!-- <a-scene embedded arjs>
+    <!-- create your content here. just a box for now 
 	  
 		
 	<!--  <a-box position='0 0.5 0' material='opacity: 0.5;'>
 	 <a-gltf-model src="scene.gltf"></a-gltf-model>
-	 </a-box> -->
+	 </a-box> 
 	 
 	 <a-assets>
     <a-asset-item id="tree" src="tree.dae"></a-asset-item>
   </a-assets>
 
-  <!-- Using the asset management system. -->
+  <!-- Using the asset management system. 
   <a-collada-model src="#tree"></a-collada-model>
   
 
   
-    <!-- define a camera which will move according to the marker position -->
+    <!-- define a camera which will move according to the marker position 
     <a-marker-camera preset='hiro'> </a-marker-camera>
 	
      
 	  
-  </a-scene>
+  </a-scene> -->
+  
+  <a-scene>
+  <a-assets>
+    <a-asset-item id="tree" src="tree.dae"></a-asset-item>
+  </a-assets>
+
+  <!-- Using the asset management system. -->
+  <a-collada-model src="#tree"></a-collada-model>
+
+  <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+  <a-collada-model src="tree.dae"></a-collada-model>
+</a-scene>
+
+
 </body>
