--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 	  <!-- define a camera which will move according to the marker position # BOTTLE -->
 	  
 	  
-	 <a-marker-camera type='bottle' url='multi/bottle.patt'>
+	 <a-marker-camera type='pattern' url='multi/bottle.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # BAG-->
 	  
 	  
-	 <a-marker-camera type='bag' url='multi/bag.patt'>
+	 <a-marker-camera type='pattern' url='multi/bag.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # MONItOR-->
 	  
 	  
-	 <a-marker-camera type='monitor' url='multi/monitor.patt'>
+	 <a-marker-camera type='pattern' url='multi/monitor.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # PHONE -->
 	  
 	 
-	 <a-marker-camera type='phone' url='multi/phone.patt'>
+	 <a-marker-camera type='pattern' url='multi/phone.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
