--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 	 
 	  <!-- define a camera which will move according to the marker position # BOTTLE -->
 	  
-	  
+	 <a-marker preset='bottle'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/bottle.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # BAG-->
 	  
-	  
+	   <a-marker preset='bag'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/bag.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # MONItOR-->
 	  
-	  
+	   <a-marker preset='monitor'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/monitor.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # PHONE -->
 	  
-	 
+	  <a-marker preset='phone'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/phone.patt'>
 		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
 	 </a-marker-camera>
