--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 	  
 	   <a-marker preset='monitor'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/monitor.patt'>
-		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
+		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 	 </a-marker-camera>
 	 
 	  <!-- define a camera which will move according to the marker position # PHONE -->
 	  
 	  <a-marker preset='phone'></a-marker> 
 	 <a-marker-camera type='pattern' url='multi/phone.patt'>
-		<a-entity position='0 0.5 0' chartbuilder="src: data.json"></a-entity>
+		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 	 </a-marker-camera>
 	 
   </a-scene>
