--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 
    
-    <script src="js/aframe-extras.js"></script>
+    <!-- <script src="js/aframe-extras.js"></script> -->
+	<script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v4.2.0/dist/aframe-extras.min.js"></script>
     <script src="js/aframe-text-geometry-component.min.js"></script>
 
 </head>
